log
Wed 24 Apr 2024 06:12:53 PM UTC: 
 tests:  0|6
total_score: 0/70
563553c
Wed 24 Apr 2024 06:16:24 PM UTC: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
41fd9fc
Wed 24 Apr 2024 06:51:01 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:32: error: expected expression before ‘)’ token
   45 |     if(map->buckets[indice] != )
      |                                ^
Compilation failed
a90782b
Wed 24 Apr 2024 07:07:22 PM UTC: 
 hashmap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘resuelve’:
hashmap.c:43:22: error: array subscript is not an integer
   43 |    while(map->buckets[posicion] != NULL)
      |                      ^
hashmap.c: In function ‘insertMap’:
hashmap.c:60:27: error: void value not ignored as it ought to be
   60 |       int posicionnueva = resuelve(map,&indice);
      |                           ^~~~~~~~
Compilation failed
de783ea
Wed 24 Apr 2024 07:08:08 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘resuelve’:
hashmap.c:43:22: error: array subscript is not an integer
   43 |    while(map->buckets[posicion] != NULL)
      |                      ^
hashmap.c: In function ‘insertMap’:
hashmap.c:60:19: error: void value not ignored as it ought to be
   60 |       int nueva = resuelve(map,&indice);
      |                   ^~~~~~~~
Compilation failed
eed14b0
Wed 24 Apr 2024 07:08:29 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘resuelve’:
hashmap.c:43:22: error: array subscript is not an integer
   43 |    while(map->buckets[posicion] != NULL)
      |                      ^
Compilation failed
d8abac5
